fixed white right overflow

--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -5,5 +5,8 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   text-align: center;
-  max-width: 100%;
+  max-width: 100vw;
+  width: 100vw;
+  overflow-x: hidden;
+  background: $primary-color;
 }
