--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,11 +1,10 @@
 #hero {
   position: relative;
-  max-height: 100vh;
   height: 100vh;
   display: flex;
   align-items: center;
   border-bottom: 0px;
-  background: $white-color;
+  // background: $white-color;
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
@@ -14,6 +13,8 @@
   left: 0;
   bottom: 0;
   right: 0;
+  max-width: 100vw;
+  overflow: hidden;
   .hero-container {
     z-index: 9999;
   }
